--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "The WebRTC project authors (http://www.webrtc.org/)"
   ],
   "scripts": {
-    "test": "grunt && grunt build && start-tests"
+    "test": "grunt && grunt build && start-tests",
+    "start": "http-server -c-1 -p 8081"
   },
   "devDependencies": {
     "bower": "^1.8.8",
@@ -29,6 +30,10 @@
     "webrtc-utilities": "^1.0.10"
   },
   "dependencies": {
-    "chromedriver": "^91.0.0"
+    "@polymer/paper-toolbar": "^3.0.1",
+    "chromedriver": "^91.0.0",
+    "http-server": "^14.1.1",
+    "polymer": "^0.5.0",
+    "webcomponents-lite": "^0.6.0"
   }
 }
